--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -915,8 +915,8 @@ paths:
 
 
                     - care_team_preferred - Appointment slots will be shown for any Physicians on
-                    the member's care team.    If the Physicians on the care team aren't available,
-                    slots will not be returned.    If there are no Physicians on the member's care
+                    the member's care team.   If the Physicians on the care team aren't available,
+                    slots will not be returned.   If there are no Physicians on the member's care
                     team, then slots will be returned for any available Physician.
 
 
@@ -967,13 +967,13 @@ paths:
                   nullable: true
                   description:
                     The user license(s) that are required to perform appointments of this type. When
-                    looking for appointment slots, only the  availability of licensed users will be
+                    looking for appointment slots, only the availability of licensed users will be
                     returned. When booking an appointment without the skip_constraints parameter,
-                    any  licensed user must have a matching license type, otherwise a warning will
-                    be returned. If more than one license code is  provided, a licensed user with
-                    any of the license codes can participate in the appointment.  Providing any
-                    value will override the entire array. Providing null or an empty array will
-                    empty out the array.
+                    any licensed user must have a matching license type, otherwise a warning will be
+                    returned. If more than one license code is provided, a licensed user with any of
+                    the license codes can participate in the appointment. Providing any value will
+                    override the entire array. Providing null or an empty array will empty out the
+                    array.
                   example:
                     - code: MD
                 video_enabled:
@@ -1332,8 +1332,8 @@ paths:
 
 
                     - care_team_preferred - Appointment slots will be shown for any Physicians on
-                    the member's care team.    If the Physicians on the care team aren't available,
-                    slots will not be returned.    If there are no Physicians on the member's care
+                    the member's care team.   If the Physicians on the care team aren't available,
+                    slots will not be returned.   If there are no Physicians on the member's care
                     team, then slots will be returned for any available Physician.
 
 
@@ -1384,13 +1384,13 @@ paths:
                   nullable: true
                   description:
                     The user license(s) that are required to perform appointments of this type. When
-                    looking for appointment slots, only the  availability of licensed users will be
+                    looking for appointment slots, only the availability of licensed users will be
                     returned. When booking an appointment without the skip_constraints parameter,
-                    any  licensed user must have a matching license type, otherwise a warning will
-                    be returned. If more than one license code is  provided, a licensed user with
-                    any of the license codes can participate in the appointment.  Providing any
-                    value will override the entire array. Providing null or an empty array will
-                    empty out the array.
+                    any licensed user must have a matching license type, otherwise a warning will be
+                    returned. If more than one license code is provided, a licensed user with any of
+                    the license codes can participate in the appointment. Providing any value will
+                    override the entire array. Providing null or an empty array will empty out the
+                    array.
                   example:
                     - code: MD
                 video_enabled:
@@ -1510,7 +1510,7 @@ paths:
                         maximum: 7
                         description:
                           The day of the week to which this rule applies, as an ISO day of week. The
-                          value of this property must be  a number from 1 to 7, where 1 represents
+                          value of this property must be a number from 1 to 7, where 1 represents
                           Monday, and 7 represents Sunday.
                         example: 1
                       start:
@@ -1530,6 +1530,21 @@ paths:
                           times may range from 00:00 to 24:00, where 24:00 represents midnight at
                           the end of the day.
                         example: 17:00
+                      appointment_types:
+                        type: array
+                        items:
+                          type: string
+                          example: aptp_meYUvkuaI2akjnb5Kwt7
+                        description: >-
+                          An optional set of appointment types that this availability rule is
+                          restricted to. Only appointments of the specified types are bookable
+                          during the period of this rule. Omitting this field or providing an empty
+                          array implies the rule can accommodate booking any appointment type.
+
+
+                          Rules are additive - when rules with different appointment type
+                          restrictions overlap in time, the set of all allowed appointment types in
+                          all overlapping rules may be booked during the overlap.
                     required:
                       - day
                       - start
@@ -1577,6 +1592,23 @@ paths:
                                 start times, end times may range from 00:00 to 24:00, where 24:00
                                 represents midnight at the end of the day.
                               example: 17:00
+                            appointment_types:
+                              type: array
+                              items:
+                                type: string
+                                example: aptp_meYUvkuaI2akjnb5Kwt7
+                              description: >-
+                                An optional set of appointment types that this override rule is
+                                restricted to. Only appointments of the specified types are bookable
+                                during the period of this override. Omitting this field or providing
+                                an empty array implies the override can accommodate booking any
+                                appointment type.
+
+
+                                Appointment type constraints are additive - when overrides with
+                                different appointment type restrictions overlap in time, the set of
+                                all allowed appointment types in all overlapping rules may be booked
+                                during the overlap.
                           required:
                             - start
                             - end
@@ -7312,9 +7344,9 @@ components:
 
 
             - care_team_preferred - Appointment slots will be shown for any Physicians on the
-            member's care team.    If the Physicians on the care team aren't available, slots will
-            not be returned.    If there are no Physicians on the member's care team, then slots
-            will be returned for any available Physician.
+            member's care team.   If the Physicians on the care team aren't available, slots will
+            not be returned.   If there are no Physicians on the member's care team, then slots will
+            be returned for any available Physician.
 
 
             - care_team_hybrid - Appointment slots will be shown for all users in the Physicians
@@ -7373,11 +7405,11 @@ components:
               - description
           description:
             The user license(s) that are required to perform appointments of this type. When looking
-            for appointment slots, only the  availability of licensed users will be returned. When
-            booking an appointment without the skip_constraints parameter, any  licensed user must
+            for appointment slots, only the availability of licensed users will be returned. When
+            booking an appointment without the skip_constraints parameter, any licensed user must
             have a matching license type, otherwise a warning will be returned. If more than one
-            license code is  provided, a licensed user with any of the license codes can participate
-            in the appointment.  Providing any value will override the entire array. Providing null
+            license code is provided, a licensed user with any of the license codes can participate
+            in the appointment. Providing any value will override the entire array. Providing null
             or an empty array will empty out the array.
           example:
             - code: MD
@@ -7460,7 +7492,7 @@ components:
           description: >-
             The IANA time zone identifier in which this schedule should be interpreted. A time zone
             must be provided, but can be set to UTC. All times in a user's availability schedule are
-            considered to be in "local" time, so they  are impossible to interpret without a time
+            considered to be in "local" time, so they are impossible to interpret without a time
             zone.
 
 
@@ -7480,7 +7512,7 @@ components:
                 type: number
                 description:
                   The day of the week to which this rule applies, as an ISO day of week. The value
-                  of this property must be  a number from 1 to 7, where 1 represents Monday, and 7
+                  of this property must be a number from 1 to 7, where 1 represents Monday, and 7
                   represents Sunday.
                 example: 1
               start:
@@ -7499,32 +7531,55 @@ components:
                   formatted as HH:mm, using 24 hour time. Unlike rule start times, end times may
                   range from 00:00 to 24:00, where 24:00 represents midnight at the end of the day.
                 example: 17:00
+              appointment_types:
+                type: array
+                items:
+                  type: string
+                  example: aptp_meYUvkuaI2akjnb5Kwt7
+                description: >-
+                  An optional set of appointment types that this availability rule is restricted to.
+                  Only appointments of the specified types are bookable during the period of this
+                  rule. Omitting this field or providing an empty array implies the rule can
+                  accommodate booking any appointment type.
+
+
+                  Rules are additive - when rules with different appointment type restrictions
+                  overlap in time, the set of all allowed appointment types in all overlapping rules
+                  may be booked during the overlap.
             required:
               - day
               - start
               - end
+              - appointment_types
           description:
             The list of rules for this person's availability. Each rule defines a day of week, start
-            time, and end time of the rule. There may be multiple rules for a single day of the
-            week. When that happens, the rules represent multiple blocks of times that the user is
-            available in a given day. For example, you may be available from 9am-12pm, break for
-            lunch, and then be available 1pm-5pm.
+            and end time, and an optional array of appointment types to which the rule applies.
+            There may be multiple rules for a single day of the week. When that happens, the rules
+            represent multiple blocks of times that the user is available in a given day. For
+            example, you may be available from 9am-12pm, break for lunch, and then be available
+            1pm-5pm.
           example:
             - day: 1
               start: 09:00
               end: 17:00
+              appointment_types:
+                - aptp_meYUvkuaI2akjnb5Kwt7
             - day: 2
               start: 09:00
               end: 17:00
+              appointment_types: []
             - day: 3
               start: 09:00
               end: 17:00
+              appointment_types: []
             - day: 4
               start: 09:00
               end: 17:00
+              appointment_types: []
             - day: 5
               start: 09:00
               end: 17:00
+              appointment_types: []
         overrides:
           type: array
           items:
@@ -7559,9 +7614,25 @@ components:
                         may range from 00:00 to 24:00, where 24:00 represents midnight at the end of
                         the day.
                       example: 17:00
+                    appointment_types:
+                      type: array
+                      items:
+                        type: string
+                        example: aptp_meYUvkuaI2akjnb5Kwt7
+                      description: >-
+                        An optional set of appointment types that this override rule is restricted
+                        to. Only appointments of the specified types are bookable during the period
+                        of this override. Omitting this field or providing an empty array implies
+                        the override can accommodate booking any appointment type.
+
+
+                        Appointment type constraints are additive - when overrides with different
+                        appointment type restrictions overlap in time, the set of all allowed
+                        appointment types in all overlapping rules may be booked during the overlap.
                   required:
                     - start
                     - end
+                    - appointment_types
             required:
               - date
               - rules
